Correct spacing in CSS styles

--- a/css/main.css
+++ b/css/main.css
@@ -25,9 +25,16 @@ html {
 }
 
 .banner {
+  position: relative;
 
+  max-height: 24em;
+  overflow: hidden;
 }
 
 .banner-content {
-
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  color: #fff;
+  width: 100%;
 }
